2008-05-30  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	(hd_home_show_view):
	Fixed handling of mode and home position.

2008-05-30  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home-view.c:
	* src/hd-home-view.h:
	* src/hd-home.c:
	Added thumbnail mode and thumbnail-clicked for home layout view.

2008-05-30  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	Added new view button; fixed return values in button click
	handlers.

	* src/hd-switcher-group.c:
	* src/hd-switcher.c:
	Fixed return values in button click handlers.

2008-05-30  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	(hd_home_do_layout_layout):
	Added zoom out effect when switching to layout mode.

2008-05-29  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	Start of edit mode.

2008-05-29  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	(hd_home_constructed):
	Removed misplaced hd_home_set_mode() call left over from testing.

2008-05-29  Tomas Frydrych  <tf@o-hand.com>

	* src/back-button.png:
	Placeholder of back button icon.

	* src/hd-home.c:
	Added close and back butttons.

2008-05-29  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-home.c:
	* src/hd-home.h:
	Infrastructure for normal/edit/layout mode; fundamentals of normal
	and layout layouts.

2008-05-29  Tomas Frydrych  <tf@o-hand.com>

	* src/Makefile.am:
	* src/hd-home.c:
	* src/hd-home.h:
	* src/hd-home-view.c:
	* src/hd-home-view.h:
	Added HdHomeView object to represent a single home view.

2008-05-28  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-comp-mgr.c:
	(hd_comp_mgr_launch_application):
	Added available memory check; UI needed.

2008-05-28  Tomas Frydrych  <tf@o-hand.com>

	* src/hd-switcher-group.c:
	(hd_switcher_group_show_all):
	(hd_switcher_group_hide_all):
	Setup vieport to mask out client decorations as requied by the UI
	spec.

	* src/hd-switcher.c:
	(hd_switcher_item_selected):
	* src/hd-comp-mgr.c:
	(hd_comp_mgr_unregister_client):
	Fixed incorrect GObject data key.

2008-05-28  Tomas Frydrych  <tf@o-hand.com>