@@ -1,5 +1,15 @@
 2008-05-30  Tomas Frydrych  <tf@o-hand.com>
 
+	* src/hd-home-view.c:
+	* src/hd-home-view.h:
+	Added background-clicked signal.
+
+	* src/hd-home.c:
+	* src/hd-home.h:
+	Smooth home panning.
+
+2008-05-30  Tomas Frydrych  <tf@o-hand.com>
+
 	* src/hd-home.c:
 	(hd_home_show_view):
 	Fixed handling of mode and home position.
